# mhtml-article-cleaner

./: .gitignore  How to define the problem.mhtml  LICENSE  README.md  TEST_RESULTS.md  Using the Cause Mapping® Investigation Template_ The Notes Worksheet.mhtml  clean_mhtml_article.py  pyproject.toml  requirements.txt
samples/: README.md
samples/after/: An Introduction to Failure Modes and Effects Analysis (FMEA).html  Cause Mapping® Method ThinkReliability, Root Cause Analysis.html  Documenting a Near-Miss with Cause Mapping® RCA.html  Four Lessons from the Boeing 737 MAX 8 Crashes.html  How Layers of Protection Reduce Risk.html  How Much Detail is Enough in an RCA Investigation.html  How are FMEA and RCA Connected.html  How to Create Good-Looking Cause Map™ Diagrams.html  How to Evaluate Solutions in an RCA Investigation.html  How to Handle Lies and Dishonesty in Incident Investigations.html  How to Make Solutions Stick in Root Cause Analysis.html  How to Make a Timeline.html  How to define the problem.html  Process Mapping Documenting HOW you do WHAT you do.html  The Air India Flight 171 Crash What We Know So Far.html  Updating the Fishbone Diagram When Cause-and-Effect Analysis Can Be Improved.html  Using the Cause Mapping® Investigation Template Diagrams and Photos.html  Using the Cause Mapping® Investigation Template The Notes Worksheet.html  What is a 5-Why.html  (+1 more)
tests/: conftest.py  fixtures.py  test_clean_html.py  test_cli.py  test_download_image.py  test_mime_from_url_suffix.py  test_parse_mhtml.py  test_sanitize_filename.py
(+3 files in other folders)
